--- a/views/inventory/management.ejs
+++ b/views/inventory/management.ejs
@@ -4,5 +4,7 @@
     res.redirect('/')
 } %>
 
-<a href="/inv/add-classification">Add New Clasification</a>
-<a href="/inv/add-vehicle">Add New Vehicle</a>
+<div id="add">
+    <a href="/inv/add-classification" class="add_new">Add New Clasification</a>
+    <a href="/inv/add-vehicle" class="add_new">Add New Vehicle</a>
+</div>
