--- a/views/inventory/add-classification.ejs
+++ b/views/inventory/add-classification.ejs
@@ -15,7 +15,7 @@
 <form id="addClassificationForm" action="/inv/add-classification" method="post">
     <fieldset>
         <label class="add">Add New Classification* <input type="text" pattern="^[^\W_]+$" id="add-classif" name="classification_name" required></label>
-        <label class="add_info">The form must contain a direction that the new classification name cannot contain a space or special character of any kind.</label>
+        <label class="add_info">The new classification name cannot contain a space or special character of any kind.</label>
         <input type="submit" value="Add Classification" class="addButton">
     </fieldset>
 </form>
